# json

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.md
.github/: release.yml
.github/workflows/: documentation.yml  macos.yml  main.yml  ubuntu.yml  windows.yml
_sass/: jekyll-theme-leap-day.scss
docs/: doxyfile.in
examples/: CMakeLists.txt  example.cpp  run_on_file.cpp  stopwatch.hpp
inc/json/: json.hpp  typename.hpp
include/json/: json.hpp  typename.hpp
include/json/ordered_map/: ordered_map.hpp
src/: json.cpp  main.cpp
src/json/: json.cpp
test/: CMakeLists.txt  test_data_types.cpp
test/include/: person.hpp
test/src/: test_container.cpp  test_data_types.cpp  test_struct.cpp
tests/: CMakeLists.txt  mathlib.cpp  test_container.cpp  test_data_types.cpp  test_error.cpp  test_friend.cpp  test_json5.cpp  test_order.cpp  test_pointer.cpp  test_struct.cpp
tests/src/: test_container.cpp  test_data_types.cpp  test_error.cpp  test_friend.cpp  test_order.cpp  test_struct.cpp
